--- a/book.html
+++ b/book.html
@@ -53,10 +53,14 @@
 </body>
 </html> -->
 
-
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+  <!-- Required meta tags-->
+  <TITLE>
+    Dropdown Select CSS Effects | Codrops
+  </TITLE>
+</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .dropbtnmain {
