--- a/book.html
+++ b/book.html
@@ -1,4 +1,5 @@
-<!-- <!DOCTYPE html>
+<!-- 
+<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,12 +57,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta charset="utf-8">
   <!-- Required meta tags-->
-  <TITLE>
+  <title>
     Dropdown Select CSS Effects | Codrops
-  </TITLE>
-</head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  </title>
+<meta name="viewport" content="width=device-width, initial-scale=1"><style>
+.dropbtnmain {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdownselect {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownselect-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdownselect-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdownselect-content a:hover {background-color: #ddd;}
+
+.dropdownselect:hover .dropdownselect-content {display: block;}
+
+.dropdownselect:hover .dropbtnmain {background-color: #3e8e41;}
+</style></head><meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .dropbtnmain {
   background-color: #04AA6D;
