--- a/book.html
+++ b/book.html
@@ -60,7 +60,7 @@
   <meta charset="utf-8">
   <!-- Required meta tags-->
   <title>
-    Dropdown Select CSS Effects | Codrops
+    Drop Down
   </title>
   <script src="tower.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1"><style>
